samples/_failures_safe/1761496776_bb4fde_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f2b43ae.c: In function ‘main’:
./samples/SAFE/__tmp_7f2b43ae.c:174:64: error: missing terminating " character
  174 |     printf("%-12s %-15s %-6s %-6s\n", "TYPE", "VALUE", "LINE", "COL
      |                                                                ^~~~
./samples/SAFE/__tmp_7f2b43ae.c:174:5: error: expected expression at end of input
  174 |     printf("%-12s %-15s %-6s %-6s\n", "TYPE", "VALUE", "LINE", "COL
      |     ^~~~~~
./samples/SAFE/__tmp_7f2b43ae.c:174:5: error: expected declaration or statement at end of input
